2022-02-15 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Fix bug #3322.

2022-02-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (gatherImplicitVariables): fix bug #3320

2022-02-16 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* device/lib/isspace.c,
	  device/lib/isxdigit.c:
	  Check high and low byte separately for some targets, also sort compares by frequency and int value.
	* device/lib/sm83/memcpy.s,
	  device/lib/_memset.c,
	  device/lib/gets.ch:
	  Optimize sm83 assembly.

2022-02-15 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* support/regression/tests/bug-3322.c:
	  Test for bug #3322.

2022-02-14 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* .version,
	  doc/INSTALL.txt,
	  sdcc.spec:
	  Preparations for 4.2.0.

2022-02-14 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* support/regression/tests/bug-3289.c:
	  Test for recently-fixed bug #3289.

2022-02-13 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c:
	  Avoid generating illegal 6502 instructions in a few corner cases.

2022-02-13 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c,
	  sdcc/src/SDCCglue.c:
	  Removed hack that assigned function pointers entry address-1.
	* sdcc/src/mos6502/main.c:
	  Changed default output to ihx.

2022-02-12 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* support/valdiag/Makefile.in:
	  Skip not-built-by-default 65c02 port in valdiag testing.

2022-02-10 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* device/lib/pdk14/__setjmp.s:
	  Fix typo (bug #3318).

2022-02-10 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c,
	  sdcc/src/mos6502/ralloc.c:
	  Fix all warnings.

2022-02-10 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* device/lib/pdk*/__gptrget.s,
	  device/lib/pdk*/__gptrget2.s,
	  device/lib/pdk*/__setjmp.s: